--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   cupertino_icons: ^0.1.0
   scoped_model: ^0.3.0
   http: ^0.11.3+16
+  shared_preferences: ^0.5.1+1
+  rxdart: ^0.21.0
 
 dev_dependencies:
   flutter_test:
