--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_course
+name: first_flutter_app
 description: A new Flutter project.
 
 dependencies:
@@ -12,8 +12,6 @@ dependencies:
   http: "^0.11.3+16"
   shared_preferences: "^0.4.2"
   rxdart: "^0.17.0"
-  map_view: "^0.0.12"
-  location: "1.2.0"
   image_picker: "^0.4.5"
   mime: "^0.9.6"
   url_launcher: "^3.0.2"
@@ -25,19 +23,17 @@ dev_dependencies:
   flutter_launcher_icons: "^0.5.2"
 
 flutter_icons:
-  android: true 
+  android: true
   ios: true
   image_path: "assets/icon/app-icon.png"
   adaptive_icon_background: "#FFFAFAFA"
   adaptive_icon_foreground: "assets/icon/app-icon.png"
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -73,5 +69,5 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies, 
+  # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
